Refactor: Replace deprecated URL constructor with URI.create().toURL()